--- a/spa/assets/style.css
+++ b/spa/assets/style.css
@@ -42,3 +42,8 @@ body {
     background: #ffffff;
     box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px, rgba(0, 0, 0, 0.22) 0 10px 10px;
 }
+
+.purchaceBtn:hover{
+    background-color: #3CCF4E;
+    color: white;
+}
