--- a/spa/assets/style.css
+++ b/spa/assets/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 body {
     background: rgba(255, 255, 255, 0.4);
 }
@@ -50,12 +53,33 @@ body {
     color: white;
 }
 
-.loginPageBox{
+.loginPageBox {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10px;
 }
 
 .loginPageBox:hover {
     box-shadow: rgba(0, 0, 0, 0.3) 0 19px 38px, rgba(0, 0, 0, 0.22) 0 15px 12px;
+    border-radius: 10px;
+}
+
+.bgColour {
+    /*background: #ffffff;*/
+    /*background: linear-gradient(135deg, #e66767, #F97F51);*/
+    background: #e06e4e;
+    border: 10px solid white;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px, rgba(0, 0, 0, 0.22) 0 10px 10px;
+
+}
+
+.backGround-Image-Home {
+    background-image: url('img/6392961.jpg');
+    border-radius: 8px;
+    background-size: cover !important;
+}
+
+.tv-option {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px, rgba(0, 0, 0, 0.22) 0 10px 10px;
     border-radius: 10px;
 }
