--- a/spa/assets/style.css
+++ b/spa/assets/style.css
@@ -66,7 +66,7 @@ body {
 .bgColour {
     /*background: #ffffff;*/
     /*background: linear-gradient(135deg, #e66767, #F97F51);*/
-    background: #e06e4e;
+    background: #ce5e13;
     border: 10px solid white;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.25) 0 14px 28px, rgba(0, 0, 0, 0.22) 0 10px 10px;
